--- a/app/index.html
+++ b/app/index.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="blocChat">
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Bloc Base Project</title>
+    <title>Bloc Chat</title>
     <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
-    <h4>Hello, World???</h4>
+    
+
+    <ui-view></ui-view>
+
+    <!-- Angular -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+    <!-- AngularUI Router -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
+    <!-- FireBase -->
+    <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase.js"></script>
+    <!-- AngularFire -->
+    <script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script>
+
+    <script>
+    // Initialize Firebase
+    var config = {
+    apiKey: "AIzaSyCKejmSYEiqCQEg43wIB0LQy8hvwHN4vlc",
+    authDomain: "bloc-chat-d2730.firebaseapp.com",
+    databaseURL: "https://bloc-chat-d2730.firebaseio.com",
+    projectId: "bloc-chat-d2730",
+    storageBucket: "",
+    messagingSenderId: "353631376202"
+    };
+    firebase.initializeApp(config);
+    </script>
+    <!-- Application Files -->
     <script src="/scripts/app.js"></script>
 </body>
 </html>
