--- a/app/index.html
+++ b/app/index.html
@@ -3,10 +3,13 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Bloc Chat</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
     <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="styles/normalize.css">
 </head>
 <body>
-    
+
 
     <ui-view></ui-view>
 
