--- a/app/index.html
+++ b/app/index.html
@@ -5,8 +5,10 @@
     <title>Bloc Chat</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
-    <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="/styles/main.css">
+
 </head>
 <body>
 
@@ -19,9 +21,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
     <!-- AngularFire -->
     <script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script>
-
+    <!-- AngularUI Bootstrap -->
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.min.js"></script>
     <!-- FireBase -->
     <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase.js"></script>
+
     <script>
     // Initialize Firebase
     var config = {
@@ -35,8 +39,10 @@
     firebase.initializeApp(config);
     </script>
     <!-- Application Files -->
+
     <script src="/scripts/app.js"></script>
     <script src="/scripts/controllers/HomeCtrl.js"></script>
+    <script src="/scripts/controllers/ModalCtrl.js"></script>
     <script src="/scripts/factories/Room.js"></script>
 
 
