--- a/app/index.html
+++ b/app/index.html
@@ -44,6 +44,7 @@
     <script src="/scripts/controllers/HomeCtrl.js"></script>
     <script src="/scripts/controllers/ModalCtrl.js"></script>
     <script src="/scripts/factories/Room.js"></script>
+    <script src="/scripts/factories/Message.js"></script>
 
 
 </body>
