--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,8 @@
 
     <!-- Angular -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+    <!-- Angular Cookies -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-cookies.js"></script>
     <!-- AngularUI Router -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
     <!-- AngularFire -->
@@ -45,7 +47,7 @@
     <script src="/scripts/controllers/ModalCtrl.js"></script>
     <script src="/scripts/factories/Room.js"></script>
     <script src="/scripts/factories/Message.js"></script>
-
+    <script src="/scripts/controllers/BlocChatCookies.js"></script>
 
 </body>
 </html>
